# FlowGate

./: .gitignore  Makefile  PROTOBUF_PARSING_FIX.md  PROTOBUF_VERSION_ANALYSIS.md  README.md  ai_prompt.yaml  docker-compose.vector-demo.yml  docker-compose.yml  register-gateway-2.sh  rules.yaml  test_config_request.sh  test_registration.sh
backend/services/flowgate-backend/: Dockerfile  PROTOBUF_VERSION_UPDATE.md  __init__.py  config.py  database.py  main.py  opamp_server.py  pyproject.toml  regenerate_protobuf.sh  requirements.txt  test_opamp_message.py
backend/services/flowgate-backend/alembic/: env.py
backend/services/flowgate-backend/alembic/versions/: 002_add_opamp_status_fields.py  (+17 more)
backend/services/flowgate-backend/app/: __init__.py  config.py  database.py  main.py
backend/services/flowgate-backend/config/: settings.py
backend/services/flowgate-backend/models/: __init__.py  audit_log.py  base.py  deployment.py  gateway.py  organization.py  template.py  tenant.py  user.py
backend/services/flowgate-backend/repositories/: __init__.py  base.py  deployment.py  gateway.py  template.py
backend/services/flowgate-backend/routers/: __init__.py  deployments.py  gateways.py  templates.py
backend/services/flowgate-backend/schemas/: __init__.py  base.py  common.py  deployment.py  gateway.py  template.py  tenant.py  user.py
backend/services/flowgate-backend/services/: __init__.py  deployment.py  gateway.py  opamp.py  template.py  validation.py
backend/services/flowgate-backend/tests/: test_auth.py  test_opamp_protocol.py  test_otel_builder_service.py
(+274 files in other folders)
